extensions, and hides some of the messy plumbing needed to get Python to
talk to the WMI API. It's pure Python and should work with any version of
Python from 2.1 onwards (list comprehensions) and any recent version of
pywin32.


Where do I get it?
==================

http://timgolden.me.uk/python/wmi.html


What's Changed?
===============

8th Feb 2007  1.3    . Added support for extrinsic events
28th Dec 2006 1.2.1  . Corrected problem with Event watcher reported by Charlie Taylor
                     . First steps towards pythondoc-style docstrings
8th Oct 2006  1.2    . Improved performance by lazy lookups and cached values
                       for both properties and methods.
                       Allow a list of fields to be selected instead of the
                       entire class properties.
                       Added code supplied by Paul Tiemann offers a lightweight
                       data-only version of the wmi query. This is useful where
                       real-time repeated data is required which should interfere
                       as little as possible with the host machine.
                       Code now compatible with Python v2.0.
30th Sep 2006 1.2a   . Cosmetic changes
                       _wmi_namespace.classes is now a dict, and acts as a cache
                       for wrapper classes. If find_classes is True in the __init__,
                       the names are populated but not the classes; if it is False,
                       the names are not populated. In either case, a lookup against
                       the namespace (eg for i in c.Win32_DiskDrive) will check the
                       cache first.
                       Additional user-callable subclasses_of to allow finer grained
                       control over which classes are used.
15th Aug 2006 1.1.1  . Fixed a small bug reported and patched by Jonas Bjering
7th Apr 2006  1.1    . Removed redundant qualifiers method of _wmi_object (the